--- a/branch_protection.yaml
+++ b/branch_protection.yaml
@@ -1,3 +1,8 @@
 optConfig:
   optOutStrategy: true
 action: issue
+dismissStale: true
+blockForce: true
+requireUpToDateBranch: true
+requireSignedCommits: true
+enforceOnAdmins: true
